<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.platzi.platzigram.LoginActivity"
    android:background="@color/colorPrimary"
    > <!--tools:context="com.platzi.platzigram.LoginActivity" //archivo que va a controlar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"><!--se le da peso a los componentes para poder utilizar layout_weight-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"> <!--Tamaño layout-->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/platzigram"/>
                <!--wrap_content // QUE SE AJUSTE AL CONTENIDO-->
                <!--android:background="@drawable/platzigram" // es la imagen que se encuentra en drawable-->
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
            <!--android:fillViewport="true // muy importante para no encajonar los componentes-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">
                <!--android:layout_weight="0.4" // Tamaño layout-->
                <!--android:padding="@dimen/padding_horizontal_login" // la medida se encuentra en el archivo dimens.xml-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"/>
                    <!--android:hint="@string/hint_username" // lo encontramos en la carpeta values-strings.xml-->
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"/>
                    <!--android:hint="@string/hint_username" // lo encontramos en la carpeta values-strings.xml-->
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >
                    <!--android:gravity="center" // hace que todos los componentes esten centrados-->
                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/editTextColorWhite"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccon"/>

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@color/editTextColorWhite"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccon"
                        android:layout_toRightOf="@+id/dontHaveAccount"
                        android:onClick="goCreateAccount"/>
                        <!--android:layout_toRigthOf="@+id/dontHaveAccount" // este componentes se encuentre a la derecha del componente @+id/dontHaveAccoun-->
                        <!--android:onClick="goCreateAccount" // llamamos a la clase que se encuentra en el archivo LoginActiviti-->
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
